<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="16dp"
    app:cardElevation="6dp"
    android:layout_margin="8dp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/home_course_item_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_launcher_background"
                tools:ignore="ContentDescription" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/home_course_item_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="6dp"
            android:text="@string/_3d_design"
            android:textColor="@color/primary"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/home_course_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:text="@string/_3d_design_illustration"
            android:textColor="@color/blackish"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/home_course_item_category" />

        <TextView
            android:id="@+id/home_course_item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/_48"
            android:textColor="@color/primary"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/home_course_item_name"
            app:layout_constraintTop_toBottomOf="@+id/home_course_item_name" />

        <TextView
            android:id="@+id/home_course_item_old_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"

            android:text="@string/_80"
            android:textColor="@color/blackish"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/home_course_item_price"
            app:layout_constraintTop_toTopOf="@+id/home_course_item_price" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/star"
            app:layout_constraintBottom_toBottomOf="@+id/home_course_item_rating"
            app:layout_constraintStart_toStartOf="@+id/home_course_item_price"
            app:layout_constraintTop_toTopOf="@+id/home_course_item_rating"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/home_course_item_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/_4_8"
            android:textColor="@color/blackish"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/home_course_item_price" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/q"
            android:textColor="@color/blackish"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/home_course_item_rating"
            app:layout_constraintStart_toEndOf="@+id/home_course_item_rating"
            app:layout_constraintTop_toTopOf="@+id/home_course_item_rating" />

        <TextView
            android:id="@+id/home_course_item_student_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/_12_232_students"
            android:textColor="@color/blackish"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/home_course_item_rating"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintTop_toTopOf="@+id/home_course_item_rating" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>